Bug 459579 - lspclient: rootpath wrong if different project activated than of the document openend
Summary: lspclient: rootpath wrong if different project activated than of the document...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-23 20:05 UTC by Eric Armbruster
Modified: 2022-09-25 16:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Armbruster 2022-09-23 20:05:36 UTC
STEPS TO REPRODUCE
1. Open two projects with different LSP servers using Open Folder. Requires the LSP server of project 1 to determine its rootpath using the project base directory (e.g. Omnisharp Rosyln).
2. Activate project 2 in the project combobox and open a file of project 1 

OBSERVED RESULT
The project base directory of project 1 is used


EXPECTED RESULT
The project base directory of project 2 is used

Workaround
Make sure the project activated is the project of the opened file.
Comment 1 Christoph Cullmann 2022-09-25 16:45:48 UTC
Git commit b30e095f0556cb32d7ff38d0588143e6b3265b0d by Christoph Cullmann.
Committed on 25/09/2022 at 16:45.
Pushed by cullmann into branch 'master'.

use correct project info for the document we work on

M  +4    -5    addons/lspclient/lspclientservermanager.cpp

https://invent.kde.org/utilities/kate/commit/b30e095f0556cb32d7ff38d0588143e6b3265b0d