use correct project info for the document we work on

BUG: 459579